Revert "Update UserServiceTest.java"
This reverts commit 9833b4651f2ffb2d55ef649262a0985d96c6e870.